--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
     "name": "fib-orm",
-    "version": "1.0.0",
-    "description": "",
+    "version": "1.0.1",
+    "description": "Object Relational Mapping for fibjs",
     "main": "lib/index.js",
+    "repository": "git://github.com/xicilion/fib-orm.git",
     "author": "Liu Hu <lion@9465.net>",
+    "homepage": "https://github.com/xicilion/fib-orm",
     "license": "MIT",
     "scripts": {
         "test": "fibjs test/main.js"
