--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "fib-orm",
-    "version": "1.4.0-dev",
+    "version": "1.4.1",
     "description": "Object Relational Mapping for fibjs",
     "main": "lib/index.js",
     "types": "@types/index.d.ts",
