--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
-    "name": "fib-orm",
-    "version": "1.4.2",
+    "name": "@fxjs/orm",
+    "version": "1.4.2-postalpha",
     "description": "Object Relational Mapping for fibjs",
     "main": "lib/index.js",
     "types": "@types/index.d.ts",
-    "repository": "git://github.com/fibjs/fib-orm.git",
+    "repository": "git://github.com/fxjs-modules/orm.git",
     "author": "Liu Hu <lion@9465.net>",
-    "homepage": "https://github.com/fibjs/fib-orm",
+    "contributors": [
+        {
+            "email": "richardo2016@gmail.com",
+            "name": "Richard"
+        }
+    ],
+    "homepage": "https://github.com/fxjs-modules/orm",
     "license": "MIT",
     "keywords": [
         "orm",
@@ -32,12 +38,17 @@
         ]
     },
     "dependencies": {
-        "orm": "^3.2.2"
+        "@fibjs/enforce": "0.0.1",
+        "async": "^2.6.1",
+        "bluebird": "^3.5.2",
+        "hat": "0.0.3",
+        "sql-ddl-sync": "^0.3.14",
+        "sql-query": "^0.1.27"
     },
     "devDependencies": {
-        "@fibjs/ci": "^2.0.0",
+        "@fibjs/ci": "^2.1.0",
         "@types/fibjs": "^0.26.3",
         "fib-typify": "^0.3.0",
-        "lodash": "^4.17.4"
+        "lodash": "^4.17.11"
     }
 }
