--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@fxjs/orm",
-    "version": "1.4.2-postalpha",
+    "version": "1.4.2-postalpha.2",
     "description": "Object Relational Mapping for fibjs",
     "main": "lib/index.js",
     "types": "@types/index.d.ts",
