--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,11 @@
 {
     "compilerOptions": {
         "noImplicitAny": false,
-        "noImplicitUseStrict": true
+        "noImplicitUseStrict": true,
+        "lib": [
+            "es6",
+            "es2015",
+            "es2016"            
+        ]
     }
 }
