--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "devDependencies": {
         "@fibjs/ci": "^2.1.0",
         "@types/fibjs": "^0.26.5",
-        "lodash": "^4.17.11"
+        "lodash": "^4.17.11",
+        "semver": "^5.6.0"
     }
 }
