--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     },
     "dependencies": {
         "@fibjs/enforce": "0.0.7",
-        "@fxjs/sql-ddl-sync": "^0.2.1",
+        "@fxjs/sql-ddl-sync": "^0.2.2",
         "@fxjs/sql-query": "^0.1.4",
         "lodash.clonedeep": "^4.5.0",
         "lodash.flatten": "^4.4.0",
@@ -53,7 +53,7 @@
         "semver": "^5.6.0"
     },
     "peerDependencies": {
-        "@fxjs/sql-query": "0.1.x",
-        "@fxjs/sql-ddl-syn": "0.1.x"
+        "@fxjs/sql-ddl-sync": "0.2.x",
+        "@fxjs/sql-query": "0.1.x"
     }
 }
