--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
         ]
     },
     "dependencies": {
-        "@fibjs/enforce": "0.0.7",
-        "@fxjs/sql-ddl-sync": "^0.3.0",
-        "@fxjs/sql-query": "^0.2.0",
+        "@fibjs/enforce": "0.0.8",
+        "@fxjs/sql-ddl-sync": "^0.3.1",
+        "@fxjs/sql-query": "^0.2.1",
         "lodash.clonedeep": "^4.5.0",
         "lodash.flatten": "^4.4.0",
         "lodash.merge": "^4.6.1"
@@ -48,12 +48,16 @@
     "devDependencies": {
         "@fibjs/ci": "^2.1.0",
         "@types/fibjs": "^0.26.5",
+        "@types/lodash.clonedeep": "^4.5.6",
+        "@types/lodash.flatten": "^4.4.6",
+        "@types/lodash.merge": "^4.6.6",
         "fib-typify": "^0.5.2",
         "lodash": "^4.17.11",
         "semver": "^5.6.0"
     },
     "peerDependencies": {
-        "@fxjs/sql-ddl-sync": "0.3.x",
-        "@fxjs/sql-query": "0.2.x"
+        "@fxjs/sql-ddl-sync": ">= 0.3.1 < 0.4",
+        "@fxjs/sql-query": ">= 0.2.1 < 0.3",
+        "@ibjs/enforce": ">= 0.0.8 < 0.1"
     }
 }
