--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,10 @@
 {
     "compilerOptions": {
+        "target": "es6",
+        "module": "commonjs",
         "noImplicitAny": true,
         "noImplicitUseStrict": true,
+        "inlineSourceMap": true,
         "lib": [
             "es6",
             "es2015",
