--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@fxjs/orm",
-    "version": "1.9.8",
+    "version": "1.10.0-alpha",
     "description": "Object Relational Mapping for fibjs",
     "main": "lib",
     "types": "@types/index.d.ts",
