--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
         "semver": "^5.6.0"
     },
     "peerDependencies": {
-        "@fxjs/sql-ddl-sync": ">= 0.3.6 < 0.4",
+        "@fxjs/sql-ddl-sync": ">= 0.4 <= 0.5",
         "@fxjs/sql-query": ">= 0.4 < 0.5",
         "@fibjs/enforce": ">= 0.0.8 < 0.1",
         "@fxjs/knex": ">= 0.1.1 < 0.2"
