--- a/packages/orm-plugin-uacl/package.json
+++ b/packages/orm-plugin-uacl/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@fxjs/orm": "^1.10.x",
+    "@fxjs/orm": "^1.10.2",
     "fib-kv": "^1.3.1",
     "fib-pool": "^1.5.3",
     "rxjs": "^6.5.2"
