--- a/packages/orm-plugin-uacl/package.json
+++ b/packages/orm-plugin-uacl/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "fib-typify ./src -o ./lib",
     "test": "fibjs test",
-    "ci": "npm run build && npm run test"
+    "ci": "npm run build && npm run test",
+    "prepublishOnly": "npm run ci"
   },
   "author": "",
   "license": "ISC",
