--- a/packages/sql-ddl-sync/tsconfig.json
+++ b/packages/sql-ddl-sync/tsconfig.json
@@ -4,17 +4,6 @@
         "module": "commonjs",
         "noImplicitAny": true,
         "noImplicitUseStrict": true,
-        "inlineSourceMap": false,
-        "lib": [
-            "es6",
-            "es2015",
-            "es2016"            
-        ],
-        "types": [
-            "@fibjs/types"
-        ],
-        "typeRoots": [
-            "@types/index.d.ts"
-        ]
+        "allowSyntheticDefaultImports": false
     }
 }
