--- a/packages/db-driver/package.json
+++ b/packages/db-driver/package.json
@@ -33,9 +33,11 @@
 	},
 	"devDependencies": {
 		"@fibjs/types": "^0.27.1",
+		"@fxjs/knex": "^0.1.1",
 		"cross-env": "^5.2.0",
 		"fib-rollup": "^0.4.0",
 		"fib-typify": "^0.6.0",
+		"knex": "^0.16.5",
 		"rollup-plugin-commonjs": "^9.2.1",
 		"should": "^13.2.3"
 	},
