packages, sql-ddl-sync: upgrade dependencies.

--- a/packages/sql-ddl-sync/package.json
+++ b/packages/sql-ddl-sync/package.json
@@ -37,7 +37,7 @@
 	"devDependencies": {
 		"@fibjs/ci": "^2.2.0",
 		"@fibjs/types": "^0.27.1",
-		"@fxjs/db-driver": "0.0.1",
+		"@fxjs/db-driver": "^0.0.2",
 		"@fxjs/sql-query": "^0.4.0",
 		"cross-env": "^5.2.0",
 		"fib-rollup": "^0.4.0",
