--- a/.travis.yml
+++ b/.travis.yml
@@ -52,7 +52,7 @@ matrix:
       env:
         - VERSION=0.26.1
 services:
-  - mysql
+    - mysql
 before_install:
   - OS=linux
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
@@ -65,7 +65,7 @@ before_install:
       brew install mariadb;
       mysql.server start;
     fi
-  - mysql -uroot -e 'CREATE DATABASE IF NOT EXISTS `fxjs-orm-test`;';
+  - mysql -uroot -e 'CREATE DATABASE IF NOT EXISTS `fibjs-test`;';
 script:
   - npm i
   - mkdir -p ./node_modules/.bin
