--- a/.travis.yml
+++ b/.travis.yml
@@ -4,45 +4,13 @@ matrix:
   include:
     - os: linux
       env:
-        - VERSION=0.21.0
-    - os: linux
-      env:
-        - VERSION=0.22.0
-    - os: linux
-      env:
-        - VERSION=0.23.0
-    - os: linux
-      env:
-        - VERSION=0.24.0
-    - os: linux
-      env:
-        - VERSION=0.25.0
-    - os: linux
-      env:
         - VERSION=0.26.0
     - os: linux
       env:
         - VERSION=0.26.1
-    - os: osx
-      osx_image: xcode9
+    - os: linux
       env:
-        - VERSION=0.21.0
-    - os: osx
-      osx_image: xcode9
-      env:
-        - VERSION=0.22.0
-    - os: osx
-      osx_image: xcode9
-      env:
-        - VERSION=0.23.0
-    - os: osx
-      osx_image: xcode9
-      env:
-        - VERSION=0.24.0
-    - os: osx
-      osx_image: xcode9
-      env:
-        - VERSION=0.25.0
+        - VERSION=0.27.0
     - os: osx
       osx_image: xcode9
       env:
@@ -51,6 +19,10 @@ matrix:
       osx_image: xcode9
       env:
         - VERSION=0.26.1
+    - os: osx
+      osx_image: xcode9
+      env:
+        - VERSION=0.27.0
 services:
     - mysql
 before_install:
@@ -65,11 +37,13 @@ before_install:
       brew install mariadb;
       mysql.server start;
     fi
-  - mysql -uroot -e 'CREATE DATABASE IF NOT EXISTS `fibjs-test`;';
+  - mysql -uroot -e 'CREATE DATABASE IF NOT EXISTS `fxjs-orm-test`;';
 script:
   - npm i
   - mkdir -p ./node_modules/.bin
-  - curl -SL "https://github.com/fibjs/fibjs/releases/download/v${VERSION}/fibjs-v${VERSION}-${OS}-x64.xz" -o ./node_modules/.bin/fibjs.xz
-  - xz -d ./node_modules/.bin/fibjs.xz
+  - if [[ ! -f ./node_modules/.bin/fibjs ]]; then
+      curl -SL "https://github.com/fibjs/fibjs/releases/download/v${VERSION}/fibjs-v${VERSION}-${OS}-x64.xz" -o ./node_modules/.bin/fibjs.xz;
+      xz -d ./node_modules/.bin/fibjs.xz;
+    fi
   - chmod a+x ./node_modules/.bin/fibjs
   - npm run ci
