upgrade sql-ddl-sync

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
         "@fxjs/db-driver": "^0.0.3",
         "@fxjs/knex": "^0.1.1",
         "@fxjs/orm-core": "^0.0.1",
-        "@fxjs/sql-ddl-sync": "^0.5.7",
+        "@fxjs/sql-ddl-sync": "^0.6.0",
         "@fxjs/sql-query": "^0.5.1",
         "fib-pool": "^1.5.3",
         "knex": "^0.16.3",
@@ -64,7 +64,7 @@
         "semver": "^5.6.0"
     },
     "peerDependencies": {
-        "@fxjs/sql-ddl-sync": ">= 0.5 <= 0.6",
+        "@fxjs/sql-ddl-sync": ">= 0.6 < 7",
         "@fxjs/sql-query": ">= 0.5 < 0.6",
         "@fibjs/enforce": ">= 0.1.1 < 0.2",
         "@fxjs/knex": ">= 0.1.1 < 0.2"
