chore(release): publish
 - @fxjs/db-driver@0.1.0
 - @fxjs/knex@0.3.0
 - @fxjs/orm-core@0.1.0
 - @fxjs/orm-plugin-pool@1.0.0
 - @fxjs/orm-plugin-uacl@1.0.0
 - @fxjs/orm@1.12.0
 - @fxjs/sql-ddl-sync@0.7.0
 - @fxjs/sql-query@0.7.0

--- a/packages/orm-core/package.json
+++ b/packages/orm-core/package.json
@@ -17,13 +17,11 @@
 	},
 	"author": "richardo2016 <richardo2016@gmail.com>",
 	"license": "ISC",
-	"dependencies": {},
 	"devDependencies": {
 		"@fibjs/types": "^0.31.0",
-		"fib-typify": "^0.8.3",
-		"fib-pool": "^1.6.0"
+		"fib-pool": "^1.6.0",
+		"fib-typify": "^0.8.3"
 	},
-	"peerDependencies": {},
 	"private": false,
 	"files": [
 		"lib",
