--- a/packages/orm-plugin-pool/package.json
+++ b/packages/orm-plugin-pool/package.json
@@ -16,10 +16,10 @@
 		"fib-pool": "^1.5.3"
 	},
 	"devDependencies": {
-		"@fxjs/orm": "^1.10.x",
-		"fib-typify": "^0.8.3",
 		"@fibjs/types": "^0.31.0",
-		"fib-pool": "^1.6.0"
+		"@fxjs/orm": "^1.12.0",
+		"fib-pool": "^1.6.0",
+		"fib-typify": "^0.8.3"
 	},
 	"peerDependencies": {
 		"@fxjs/orm": ">= 1.10.1 <= 2.0"
