--- a/packages/orm-plugin-uacl/package.json
+++ b/packages/orm-plugin-uacl/package.json
@@ -13,15 +13,15 @@
 	"author": "richardo2016 <richardo2016@gmail.com>",
 	"license": "ISC",
 	"dependencies": {
-		"@fxjs/orm": "^1.10.2",
+		"@fxjs/orm": "^1.12.0",
 		"fib-kv": "^1.3.1",
 		"fib-pool": "^1.5.3",
 		"rxjs": "^6.5.2"
 	},
 	"devDependencies": {
-		"fib-typify": "^0.8.3",
 		"@fibjs/types": "^0.31.0",
-		"fib-pool": "^1.6.0"
+		"fib-pool": "^1.6.0",
+		"fib-typify": "^0.8.3"
 	},
 	"peerDependencies": {
 		"@fxjs/orm": ">= 1.10.1 < 2"
