--- a/packages/orm/package.json
+++ b/packages/orm/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@fxjs/orm",
-	"version": "1.11.4",
+	"version": "1.12.0",
 	"description": "",
 	"main": "lib",
 	"types": "typings/index.d.ts",
@@ -24,11 +24,11 @@
 	],
 	"scripts": {
 		"build": "ftsc ./src/* --outDir ./lib",
-        "test": "fibjs test",
-        "ci": "npm run ci-sqlite",
-        "cio": "npm run build && npm run test",
-        "ci-mysql": "npm run build && cross-env ORM_PROTOCOL=mysql npm run test",
-        "ci-sqlite": "npm run build && cross-env ORM_PROTOCOL=sqlite npm run test",
+		"test": "fibjs test",
+		"ci": "npm run ci-sqlite",
+		"cio": "npm run build && npm run test",
+		"ci-mysql": "npm run build && cross-env ORM_PROTOCOL=mysql npm run test",
+		"ci-sqlite": "npm run build && cross-env ORM_PROTOCOL=sqlite npm run test",
 		"prepublishOnly": "npm run ci"
 	},
 	"ci": {
@@ -45,10 +45,10 @@
 		"@fxjs/db-driver": "^0.1.0",
 		"@fxjs/knex": "^0.3.0",
 		"@fxjs/orm-core": "^0.1.0",
-		"@fxjs/sql-ddl-sync": "^0.6.5",
+		"@fxjs/sql-ddl-sync": "^0.7.0",
 		"@fxjs/sql-query": "^0.7.0",
-		"fib-pool": "^1.6.0",
 		"@types/knex": "^0.16.1",
+		"fib-pool": "^1.6.0",
 		"knex": "^0.19.5",
 		"lodash.clonedeep": "^4.5.0",
 		"lodash.flatten": "^4.4.0",
@@ -62,16 +62,16 @@
 		"@types/lodash.merge": "^4.6.6",
 		"async": "^2.6.2",
 		"cross-env": "^5.2.0",
+		"fib-pool": "^1.6.0",
 		"fib-typify": "^0.8.3",
 		"lodash": "^4.17.11",
-		"semver": "^5.6.0",
-		"fib-pool": "^1.6.0"
+		"semver": "^5.6.0"
 	},
 	"peerDependencies": {
-		"@fxjs/sql-ddl-sync": ">= 0.6 < 7",
-		"@fxjs/sql-query": ">= 0.5 <= 0.7",
 		"@fibjs/enforce": ">= 0.1.1 < 0.2",
 		"@fxjs/knex": ">= 0.3 <= 0.3",
+		"@fxjs/sql-ddl-sync": ">= 0.6 < 7",
+		"@fxjs/sql-query": ">= 0.5 <= 0.7",
 		"knex": ">= 0.19.0 < 0.20"
 	},
 	"private": true,
