--- a/packages/sql-query/package.json
+++ b/packages/sql-query/package.json
@@ -30,10 +30,10 @@
 		"@fibjs/types": "^0.31.0",
 		"@fxjs/knex": "^0.3.0",
 		"cross-env": "^5.2.0",
+		"fib-pool": "^1.6.0",
 		"fib-rollup": "^0.4.0",
 		"fib-typify": "^0.8.3",
-		"rollup-plugin-commonjs": "^9.2.0",
-		"fib-pool": "^1.6.0"
+		"rollup-plugin-commonjs": "^9.2.0"
 	},
 	"peerDependencies": {
 		"@fxjs/knex": ">= 0.2.0"
