chore: adapt to fibjs 0.34.x.

--- a/lerna.json
+++ b/lerna.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@fibjs/ci": "^2.2.0",
+    "@fibjs/types": "^0.34.1",
     "cross-env": "^5.2.0",
     "fib-typify": "^0.8.3",
     "lodash": "^4.17.11",
