--- a/.github/workflows/run-ci.yml
+++ b/.github/workflows/run-ci.yml
@@ -25,7 +25,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-18.04, windows-2016, macos-10.15]
-        version: [0.33.0]
+        version: [0.33.0, 0.34.0]
         arch: [amd64, i386]
         exclude:
           - os: windows-2016
