--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "private": true,
   "scripts": {
+    "bootstrap": "lerna bootstrap --no-hoist",
     "build": "lerna run build",
     "ci": "lerna run ci",
     "update-pkg": "fibjs ./scripts/write-pkg-manifest.js",
