--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -22,6 +22,12 @@
 	},
 	"author": "richardo2016 <richardo2016@gmail.com>",
 	"license": "ISC",
+	"dependencies": {
+		"@fibcli/make-cli": "^0.1.1",
+		"@fxjs/cli": "^0.0.6",
+		"@fxjs/db-driver": "^0.1.0",
+		"@fxjs/sql-ddl-sync": "^0.7.1"
+	},
 	"devDependencies": {
 		"@fibjs/types": "^0.34.1",
 		"fib-pool": "^1.6.0",
@@ -33,9 +39,5 @@
 	"files": [
 		"lib",
 		"typings"
-	],
-	"dependencies": {
-		"@fibcli/make-cli": "^0.1.1",
-		"@fxjs/cli": "^0.0.6"
-	}
+	]
 }
