--- a/Dockerfile/docker-compose.yml
+++ b/Dockerfile/docker-compose.yml
@@ -1,36 +1,49 @@
 version: "3.7"
 services:
-  db5.6:
+  mysql5.6:
     image: mysql:5.6
     restart: always
     ports:
       - "3356:3306"
     volumes:
-      - "db_data:/var/lib/mysql5.6"
+      - "./mydata5.6:/var/lib/mysql5.6"
     environment:
       - MYSQL_ALLOW_EMPTY_PASSWORD=yes
       - MYSQL_DATABASE=fxjs-orm-test
-  db5.7:
+  mysql5.7:
     image: mysql:5.7
     restart: always
     ports:
       - "3357:3306"
     volumes:
-      - "db_data:/var/lib/mysql5.7"
+      - "./mydata5.7:/var/lib/mysql5.7"
     environment:
       - MYSQL_ALLOW_EMPTY_PASSWORD=yes
       - MYSQL_DATABASE=fxjs-orm-test
-  db8.0:
+  mysql8.0:
     image: mysql:8.0
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     ports:
       - "3380:3306"
     volumes:
-      - "db_data:/var/lib/mysql8.0"
+      - "./mydata8.0:/var/lib/mysql8.0"
     environment:
       - MYSQL_ALLOW_EMPTY_PASSWORD=yes
       - MYSQL_DATABASE=fxjs-orm-test
+  postgres14:
+    image: postgres:14
+    restart: always
+    ports:
+      - "5514:5432"
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=
+      - POSTGRES_HOST_AUTH_METHOD=trust
+      - POSTGRES_DB=fxjs-orm-test
+    # Uncomment this if you want to persist the data.
+    # volumes:
+    #   - "./pgdata:/var/lib/postgresql/data"
 
 volumes:
   db_data: null
