--- a/Dockerfile/docker-compose.yml
+++ b/Dockerfile/docker-compose.yml
@@ -2,32 +2,38 @@ version: "3.7"
 services:
   mysql5.6:
     image: mysql:5.6
+    platform: linux/x86_64
     restart: always
     ports:
       - "3356:3306"
     volumes:
-      - "./mydata5.6:/var/lib/mysql5.6"
+      - "./mydata5.6:/var/lib/mysql"
     environment:
       - MYSQL_ALLOW_EMPTY_PASSWORD=yes
       - MYSQL_DATABASE=fxjs-orm-test
   mysql5.7:
     image: mysql:5.7
+    platform: linux/x86_64
     restart: always
     ports:
       - "3357:3306"
     volumes:
-      - "./mydata5.7:/var/lib/mysql5.7"
+      - "./mydata5.7:/var/lib/mysql"
     environment:
       - MYSQL_ALLOW_EMPTY_PASSWORD=yes
       - MYSQL_DATABASE=fxjs-orm-test
   mysql8.0:
-    image: mysql:8.0
+    # options `--default-authentication-plugin` has been deprecated since mysql server 8.0.27
+    # it works on mysql 8.0.29 still, but for robust, we specify the image as mysql:8.0.26
+    image: mysql:8.0.26
+    platform: linux/x86_64
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     ports:
       - "3380:3306"
+      - "3306:3306"
     volumes:
-      - "./mydata8.0:/var/lib/mysql8.0"
+      - "./mydata8.0:/var/lib/mysql"
     environment:
       - MYSQL_ALLOW_EMPTY_PASSWORD=yes
       - MYSQL_DATABASE=fxjs-orm-test
@@ -36,14 +42,15 @@ services:
     restart: always
     ports:
       - "5514:5432"
+      - "5432:5432"
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=
       - POSTGRES_HOST_AUTH_METHOD=trust
       - POSTGRES_DB=fxjs-orm-test
     # Uncomment this if you want to persist the data.
-    # volumes:
-    #   - "./pgdata:/var/lib/postgresql/data"
+    volumes:
+      - "./pgdata:/var/lib/postgresql/data"
 
 volumes:
   db_data: null
