--- a/packages/sql-ddl-sync/package.json
+++ b/packages/sql-ddl-sync/package.json
@@ -34,10 +34,13 @@
 		"@fxjs/db-driver": "*",
 		"@fxjs/orm-core": "*"
 	},
+	"dependencies": {
+		"@fxjs/orm-core": "^0.2.0",
+		"@fxjs/sql-query": "^0.8.0"
+	},
 	"devDependencies": {
 		"@fibjs/types": "^0.34.1",
 		"@fxjs/db-driver": "^0.2.1",
-		"@fxjs/sql-query": "^0.8.0",
 		"cross-env": "^5.2.0",
 		"fib-pool": "^1.6.0",
 		"fib-rollup": "^0.4.0",
@@ -56,8 +59,5 @@
 	],
 	"publishConfig": {
 		"access": "public"
-	},
-	"dependencies": {
-		"@fxjs/orm-core": "^0.2.0"
 	}
 }
