--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -15,7 +15,7 @@
 	},
 	"homepage": "https://github.com/fxjs-modules/orm/tree/master/packages/cli",
 	"scripts": {
-		"build": "ftsc ./src/* --outDir ./lib",
+		"build": "rimraf ./lib ./typings && ftsc ./src/* --outDir ./lib",
 		"test": "fibjs test",
 		"ci": "npm run build && npm run test",
 		"prepublishOnly": "npm run ci"
@@ -35,7 +35,8 @@
 	"devDependencies": {
 		"@fibjs/types": "^0.34.1",
 		"fib-pool": "^1.6.0",
-		"fib-typify": "^0.10.0"
+		"fib-typify": "^0.10.0",
+		"rimraf": "^3.0.2"
 	},
 	"publishConfig": {
 		"access": "public"
