--- a/packages/orm-core/package.json
+++ b/packages/orm-core/package.json
@@ -10,7 +10,7 @@
 	},
 	"homepage": "https://github.com/fxjs-modules/orm/tree/master/packages/orm-core",
 	"scripts": {
-		"build": "ftsc ./src/* --outDir ./lib",
+		"build": "rimraf ./lib ./typings && ftsc ./src/* --outDir ./lib",
 		"test": "fibjs test",
 		"ci": "npm run build && npm run test",
 		"prepublishOnly": "npm run ci"
@@ -20,7 +20,8 @@
 	"devDependencies": {
 		"@fibjs/types": "^0.34.1",
 		"fib-pool": "^1.6.0",
-		"fib-typify": "^0.8.3"
+		"fib-typify": "^0.8.3",
+		"rimraf": "^3.0.2"
 	},
 	"private": false,
 	"files": [
