--- a/packages/orm/package.json
+++ b/packages/orm/package.json
@@ -23,7 +23,7 @@
 		"fibjs"
 	],
 	"scripts": {
-		"build": "ftsc ./src/* --outDir ./lib",
+		"build": "rimraf ./lib ./typings && ftsc ./src/* --outDir ./lib",
 		"test": "fibjs test",
 		"ci": "npm run ci-sqlite",
 		"prepublishOnly": "npm run ci",
@@ -56,6 +56,7 @@
 		"fib-pool": "^1.6.0",
 		"fib-typify": "^0.8.3",
 		"lodash": "^4.17.11",
+		"rimraf": "^3.0.2",
 		"semver": "^5.6.0"
 	},
 	"peerDependencies": {
