--- a/packages/sql-query/package.json
+++ b/packages/sql-query/package.json
@@ -11,7 +11,7 @@
 	},
 	"homepage": "https://github.com/fxjs-modules/orm/tree/master/packages/sql-query",
 	"scripts": {
-		"build": "ftsc ./src/* --outDir ./lib",
+		"build": "rimraf ./lib ./typings && ftsc ./src/* --outDir ./lib",
 		"test": "fibjs test/run",
 		"ci": "npm run build && npm run test",
 		"prepublishOnly": "npm run build",
@@ -32,6 +32,7 @@
 		"fib-pool": "^1.6.0",
 		"fib-rollup": "^0.4.0",
 		"fib-typify": "^0.8.3",
+		"rimraf": "^3.0.2",
 		"rollup-plugin-commonjs": "^9.2.0"
 	},
 	"peerDependencies": {
