feat: support comment field in property (#34)
* feat(orm): add `ORM.definePlugin`

* feat(orm-property): support `comment` on property, use full column descriptor for mysql.

* feat(db-driver): support `extend_config.debug_sql` on sqldriver

* fix(db-driver): set currentDb on `switchDb()`

* feat(sql-ddl-sync): fixup ddl operations on postgresql.

* fix(sql-ddl-sync): impl of `parseCollectionIndexes`

* chore(orm): rename

* feat(sql-ddl-sync): support sync `comment` for mysql & postgresql

* fix(orm-property): support for "POINT" type on `rawToProperty`

* feat(orm): support sync comment to database.

* chore(docs): add new post.

--- a/packages/sql-ddl-sync/package.json
+++ b/packages/sql-ddl-sync/package.json
@@ -29,6 +29,8 @@
 		"build": "rimraf ./lib ./typings && ftsc ./src/* --outDir ./lib",
 		"test": "fibjs test",
 		"ci": "npm run build && npm run test",
+		"ci-mysql": "npm run build && TEST_MYSQL=true npm run test",
+		"ci-postgres": "npm run build && TEST_PSQL=true npm run test",
 		"prepublishOnly": "npm run ci"
 	},
 	"files": [
