--- a/packages/orm/package.json
+++ b/packages/orm/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@fxjs/orm",
-	"version": "1.13.10",
+	"version": "1.13.11-alpha.0",
 	"description": "",
 	"main": "lib",
 	"types": "typings/index.d.ts",
@@ -34,11 +34,11 @@
 	},
 	"dependencies": {
 		"@fibjs/enforce": "^0.1.1",
-		"@fxjs/db-driver": "^0.2.3",
+		"@fxjs/db-driver": "^0.3.0",
 		"@fxjs/knex": "^0.3.2",
 		"@fxjs/orm-core": "^0.2.1",
-		"@fxjs/orm-property": "^0.1.2",
-		"@fxjs/sql-ddl-sync": "^0.8.8",
+		"@fxjs/orm-property": "^0.2.0",
+		"@fxjs/sql-ddl-sync": "^0.9.0",
 		"@fxjs/sql-query": "^0.8.3",
 		"@types/knex": "^0.16.1",
 		"fib-pool": "^1.6.0",
