--- a/packages/orm/package.json
+++ b/packages/orm/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@fxjs/orm",
-	"version": "1.13.11-alpha.0",
+	"version": "1.13.11",
 	"description": "",
 	"main": "lib",
 	"types": "typings/index.d.ts",
