--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@fxjs/orm-cli",
-	"version": "0.1.11",
+	"version": "0.1.12",
 	"private": false,
 	"description": "cli for @fxjs/orm developer",
 	"main": "lib",
@@ -28,7 +28,7 @@
 		"@fibjs/chalk": "^1.0.0",
 		"@fxjs/cli": "^0.0.6",
 		"@fxjs/db-driver": "^0.3.0",
-		"@fxjs/orm": "^1.13.11-alpha.0",
+		"@fxjs/orm": "^1.13.12",
 		"@fxjs/sql-ddl-sync": "^0.9.0",
 		"@fxjs/sql-query": "^0.8.3",
 		"@types/diff": "^5.0.2",
