--- a/packages/knex/package.json
+++ b/packages/knex/package.json
@@ -19,15 +19,15 @@
 	"author": "richardo2016 <richardo2016@gmail.com>",
 	"license": "ISC",
 	"files": [
+		"deps",
 		"lib",
 		"typings"
 	],
 	"devDependencies": {
 		"@fibjs/types": "^0.34.1",
-		"@types/knex": "^0.16.1",
 		"fib-pool": "^1.6.0",
-		"fib-typify": "^0.8.3",
-		"knex": "^0.19.5",
+		"fib-typify": "^0.10.0",
+		"knex": "^2.3.0",
 		"rimraf": "^3.0.2"
 	},
 	"publishConfig": {
