feat: better support for programmatic types (#37)
* feat: make Model generated by `orm.define` has details type hints.

* feat(orm): fixup tsconfig error hints.

* fix(orm): support enum for typos

* fix(orm): typo robust.

* chore: code cleanup

* fix(orm): support enum short type and custom type.

* feat(orm): cleanup deprecated types.

* chore: robust change.

* feat: support new Hooks `afterValidation`

--- a/packages/orm/tsconfig.json
+++ b/packages/orm/tsconfig.json
@@ -19,5 +19,12 @@
         "typeRoots": [
             "typings/index.d.ts"
         ]
-    }
+    },
+    "include": [
+        "src/**/*"
+    ],
+    "exclude": [
+        "src/**/*.js",
+        "test/**/*"
+    ]
 }
