--- a/packages/orm/package.json
+++ b/packages/orm/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@fxjs/orm",
-	"version": "1.14.4",
+	"version": "1.15.0-alpha.0",
 	"description": "",
 	"main": "lib",
 	"types": "typings/index.d.ts",
@@ -37,9 +37,9 @@
 		"@fxjs/db-driver": "^0.4.2",
 		"@fxjs/knex": "^0.4.1",
 		"@fxjs/orm-core": "^0.3.1",
-		"@fxjs/orm-property": "^0.3.1",
-		"@fxjs/sql-ddl-sync": "^0.10.2",
-		"@fxjs/sql-query": "^0.9.1",
+		"@fxjs/orm-property": "^0.3.2",
+		"@fxjs/sql-ddl-sync": "^0.10.3",
+		"@fxjs/sql-query": "^0.9.2",
 		"@types/knex": "^0.16.1",
 		"fib-pool": "^1.6.0",
 		"knex": "^0.19.5",
