--- a/packages/sql-ddl-sync/package.json
+++ b/packages/sql-ddl-sync/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@fxjs/sql-ddl-sync",
-	"version": "0.10.3",
+	"version": "0.10.4-alpha.0",
 	"description": "",
 	"private": false,
 	"publishConfig": {
@@ -47,8 +47,8 @@
 	},
 	"dependencies": {
 		"@fxjs/orm-core": "^0.3.1",
-		"@fxjs/orm-property": "^0.3.2",
-		"@fxjs/sql-query": "^0.9.2"
+		"@fxjs/orm-property": "^0.3.3-alpha.0",
+		"@fxjs/sql-query": "^0.9.3-alpha.0"
 	},
 	"devDependencies": {
 		"@fibjs/types": "^0.35.0",
