--- a/packages/sql-query/package.json
+++ b/packages/sql-query/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@fxjs/sql-query",
-	"version": "0.9.2",
+	"version": "0.9.3-alpha.0",
 	"private": false,
 	"description": "",
 	"main": "lib/Query.js",
