chore(release): publish
 - @fxjs/orm-cli@0.1.21
 - @fxjs/db-driver@0.4.3
 - @fxjs/orm-core@0.3.2
 - @fxjs/orm-property@0.3.3
 - @fxjs/orm@1.15.3
 - @fxjs/sql-ddl-sync@0.10.4
 - @fxjs/sql-query@0.9.3

--- a/packages/orm-property/package.json
+++ b/packages/orm-property/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@fxjs/orm-property",
-	"version": "0.3.3-alpha.0",
+	"version": "0.3.3",
 	"private": false,
 	"description": "",
 	"main": "lib",
@@ -32,6 +32,6 @@
 		"access": "public"
 	},
 	"dependencies": {
-		"@fxjs/sql-query": "^0.9.3-alpha.0"
+		"@fxjs/sql-query": "^0.9.3"
 	}
 }
