--- a/packages/orm/package.json
+++ b/packages/orm/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@fxjs/orm",
-	"version": "1.15.3-alpha.0",
+	"version": "1.15.3",
 	"description": "",
 	"main": "lib",
 	"types": "typings/index.d.ts",
@@ -34,12 +34,12 @@
 	},
 	"dependencies": {
 		"@fibjs/enforce": "^0.1.1",
-		"@fxjs/db-driver": "^0.4.2",
+		"@fxjs/db-driver": "^0.4.3",
 		"@fxjs/knex": "^0.4.1",
-		"@fxjs/orm-core": "^0.3.1",
-		"@fxjs/orm-property": "^0.3.3-alpha.0",
-		"@fxjs/sql-ddl-sync": "^0.10.4-alpha.0",
-		"@fxjs/sql-query": "^0.9.3-alpha.0",
+		"@fxjs/orm-core": "^0.3.2",
+		"@fxjs/orm-property": "^0.3.3",
+		"@fxjs/sql-ddl-sync": "^0.10.4",
+		"@fxjs/sql-query": "^0.9.3",
 		"@types/knex": "^0.16.1",
 		"fib-pool": "^1.6.0",
 		"knex": "^0.19.5",
