--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@fxjs/orm-cli",
-	"version": "0.1.21-alpha.0",
+	"version": "0.1.21",
 	"private": false,
 	"description": "cli for @fxjs/orm developer",
 	"main": "lib",
@@ -26,10 +26,10 @@
 		"@fibcli/make-cli": "^0.1.6",
 		"@fibcli/ora": "^0.1.0",
 		"@fibjs/chalk": "^1.0.0",
-		"@fxjs/db-driver": "^0.4.2",
-		"@fxjs/orm": "^1.15.3-alpha.0",
-		"@fxjs/sql-ddl-sync": "^0.10.4-alpha.0",
-		"@fxjs/sql-query": "^0.9.3-alpha.0",
+		"@fxjs/db-driver": "^0.4.3",
+		"@fxjs/orm": "^1.15.3",
+		"@fxjs/sql-ddl-sync": "^0.10.4",
+		"@fxjs/sql-query": "^0.9.3",
 		"@types/diff": "^5.0.2",
 		"@types/semver": "^7.3.10",
 		"diff": "^5.1.0",
