--- a/packages/sql-ddl-sync/package.json
+++ b/packages/sql-ddl-sync/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@fxjs/sql-ddl-sync",
-	"version": "0.10.4-alpha.0",
+	"version": "0.10.4",
 	"description": "",
 	"private": false,
 	"publishConfig": {
@@ -46,13 +46,13 @@
 		"@fxjs/orm-core": "*"
 	},
 	"dependencies": {
-		"@fxjs/orm-core": "^0.3.1",
-		"@fxjs/orm-property": "^0.3.3-alpha.0",
-		"@fxjs/sql-query": "^0.9.3-alpha.0"
+		"@fxjs/orm-core": "^0.3.2",
+		"@fxjs/orm-property": "^0.3.3",
+		"@fxjs/sql-query": "^0.9.3"
 	},
 	"devDependencies": {
 		"@fibjs/types": "^0.35.0",
-		"@fxjs/db-driver": "^0.4.2",
+		"@fxjs/db-driver": "^0.4.3",
 		"cross-env": "^5.2.0",
 		"fib-pool": "^1.6.0",
 		"fib-rollup": "^0.4.0",
