--- a/packages/orm-property/package.json
+++ b/packages/orm-property/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@fxjs/orm-property",
-	"version": "0.3.4",
+	"version": "0.4.0-alpha.0",
 	"private": false,
 	"description": "",
 	"main": "lib",
@@ -32,6 +32,6 @@
 		"access": "public"
 	},
 	"dependencies": {
-		"@fxjs/sql-query": "^0.9.4"
+		"@fxjs/sql-query": "^0.10.0-alpha.0"
 	}
 }
