--- a/packages/orm/package.json
+++ b/packages/orm/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@fxjs/orm",
-	"version": "1.16.0-alpha.0",
+	"version": "1.16.0",
 	"description": "",
 	"main": "lib",
 	"types": "typings/index.d.ts",
@@ -34,12 +34,12 @@
 	},
 	"dependencies": {
 		"@fibjs/enforce": "^0.1.1",
-		"@fxjs/db-driver": "^0.5.0-alpha.0",
+		"@fxjs/db-driver": "^0.5.0",
 		"@fxjs/knex": "^0.4.1",
 		"@fxjs/orm-core": "^0.3.2",
-		"@fxjs/orm-property": "^0.4.0-alpha.0",
-		"@fxjs/sql-ddl-sync": "^0.11.0-alpha.0",
-		"@fxjs/sql-query": "^0.10.0-alpha.0",
+		"@fxjs/orm-property": "^0.4.0",
+		"@fxjs/sql-ddl-sync": "^0.11.0",
+		"@fxjs/sql-query": "^0.10.0",
 		"@types/knex": "^0.16.1",
 		"fib-pool": "^1.6.0",
 		"knex": "^0.19.5",
