--- a/packages/orm-property/package.json
+++ b/packages/orm-property/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@fxjs/orm-property",
-	"version": "0.4.0",
+	"version": "0.4.1-alpha.0",
 	"private": false,
 	"description": "",
 	"main": "lib",
