--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@fxjs/orm-cli",
-	"version": "0.2.4",
+	"version": "0.2.5",
 	"private": false,
 	"description": "cli for @fxjs/orm developer",
 	"main": "lib",
@@ -26,9 +26,9 @@
 		"@fibcli/make-cli": "^0.1.6",
 		"@fibcli/ora": "^0.1.0",
 		"@fibjs/chalk": "^1.0.0",
-		"@fxjs/db-driver": "^0.5.1-alpha.0",
-		"@fxjs/orm": "^1.16.4",
-		"@fxjs/sql-ddl-sync": "^0.11.3-alpha.0",
+		"@fxjs/db-driver": "^0.5.1",
+		"@fxjs/orm": "^1.16.5",
+		"@fxjs/sql-ddl-sync": "^0.11.3",
 		"@fxjs/sql-query": "^0.10.0",
 		"@types/diff": "^5.0.2",
 		"@types/semver": "^7.3.10",
