--- a/packages/orm/package.json
+++ b/packages/orm/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@fxjs/orm",
-	"version": "1.16.9",
+	"version": "1.16.10",
 	"description": "",
 	"main": "lib",
 	"types": "typings/index.d.ts",
@@ -42,6 +42,7 @@
 		"@fxjs/sql-query": "^0.10.1",
 		"@types/knex": "^0.16.1",
 		"fib-pool": "^1.6.0",
+		"fib-cache": "^1.1.0",
 		"knex": "^2.5.1",
 		"lodash.clonedeep": "^4.5.0",
 		"lodash.flatten": "^4.4.0",
